--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "php": ">=8.2",
+        "php": ">=8.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/dbal": "^3",
@@ -81,11 +81,7 @@
         "symfony/polyfill-php82": "*"
     },
     "scripts": {
-        "symfony-cmd": "symfony console some:command",
-        "post-install-cmd": [
-            "symfony-cmd"
-        ],
-        "post-update-cmd": []
+        "symfony-cmd": "symfony console"
     },
     "conflict": {
         "symfony/symfony": "*"
