--- a/compose.yaml
+++ b/compose.yaml
@@ -3,45 +3,26 @@ services:
     build:
       context: .  # Le contexte de construction est le répertoire actuel
       dockerfile: Dockerfile  # Assurez-vous que le fichier s'appelle Dockerfile
+    image: php:8.3-apache
     ports:
-      - "8000:80" # Redirection du port 8000 du conteneur vers le port 8000 de votre machine locale
-    volumes:
-      - .:/var/www/html
-    command: php -S 127.0.0.1:8000 -t public
-    environment:
-      DATABASE_URL: "mysql://root:supersaiyan@127.0.0.1:3306/db_shy?serverVersion=8.0.39&charset=utf8mb4" # Remplacez les valeurs par vos propres informations de base de données
-      
+      - "8000:8000" # Redirection du port 8000 du conteneur vers le port 8000 de votre machine locale 
     depends_on:
-      - database
-    networks:
-      - app-network
+      - database # Attendre que la base de données soit prête avant de démarrer l'application
 
   database:
-    image: mysql:8.0.39
+    image: mysql:8.0
+    restart: always
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-root}
       MYSQL_DATABASE: ${MYSQL_DB:-db_shy}
-      MYSQL_USER: ${MYSQL_USER:-root}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD:-supersaiyan}
-    healthcheck:
-      test: ["CMD", "mysql_isready", "-d", "${MYSQL_DB:-db_shy}", "-U", "${MYSQL_USER:-root}"]
-      timeout: 5s
-      retries: 5
-      start_period: 60s
     volumes:
       - database_data:/var/lib/mysql/data:rw
-    networks:
-      - app-network
 
   mailer:
     image: axllent/mailpit
     ports:
       - "1025:1025"
       - "8025:8025"
-    
-networks:
-  app-network:
-    driver: bridge
 
 volumes:
   database_data:
