--- a/.env
+++ b/.env
@@ -17,7 +17,6 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=077b37c0d872da897665ceab06c1217b
-APP_DEBUG=true
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -25,7 +24,7 @@ APP_DEBUG=true
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
+DATABASE_URL="mysql://root:supersaiyan@localhost:3306/db_shy?serverVersion=8.0.40&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
