Updated Controller, Datafixtures, and others

--- a/.env
+++ b/.env
@@ -16,6 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
+APP_DEBUG=1
 APP_SECRET=077b37c0d872da897665ceab06c1217b
 ###< symfony/framework-bundle ###
 
