--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,4 +1,9 @@
 services:
+
+    App\Security\LoginFormAuthenticator:
+        arguments:
+            $urlGenerator: '@router'
+            
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
