--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,10 +16,12 @@ security:
         main:
             lazy: true
             provider: app_user_provider
-            custom_authenticator: App\Security\LoginFormAuthenticator
+            form_login:
+                login_path: app_login
+                check_path: app_login
+                enable_csrf: true
             logout:
                 path: app_logout
-                target: app_home
                 # where to redirect after logout
                 # target: app_any_route
 
