--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,6 +1,9 @@
 twig:
     file_name_pattern: '*.twig'
-
+    default_path: '%kernel.project_dir%/templates'
+    debug: true
+    strict_variables: true
+    
 when@test:
     twig:
         strict_variables: true
