--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,22 +1,32 @@
 services:
-
-    App\Security\LoginFormAuthenticator:
-        arguments:
-            $urlGenerator: '@router'
-            
-    # default configuration for services in *this* file
     _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
-        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        autowire: true
+        autoconfigure: true
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/'
         exclude:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
+            - '../src/Tests/'
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+    App\Service\NotificationService:
+        arguments:
+            $mailer: '@mailer'
+            $entityManager: '@doctrine.orm.entity_manager'
+
+    App\Service\RoomAvailabilityService:
+        arguments:
+            $reservationRepository: '@App\Repository\ReservationRepository'
+            $notificationService: '@App\Service\NotificationService'
+
+    App\EventSubscriber\ReservationCheckSubscriber:
+        arguments:
+            $roomAvailabilityService: '@App\Service\RoomAvailabilityService'
+            $session: '@session.factory'
+
+    App\Service\ScheduledTasksService:
+        arguments:
+            $roomAvailabilityService: '@App\Service\RoomAvailabilityService'
+            $session: '@session.factory'
