--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=077b37c0d872da897665ceab06c1217b
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:yourpassword@database:3306/db_shy?serverVersion=8.0.40&charset=utf8mb4"
+DATABASE_URL="mysql://root:yourpassword@127.0.0.1:3306/db_shy?serverVersion=8.0.40&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
